# CursoC

./: CMakeLists.txt  README.md
EXAMENES/: 2021P4.c  2223MatricesDiferentes.c
Ejercicios/: ArrayOpsBasicas.c  CalculadoraSimple.c  CircunferenciaCirculo.c  ConversionTemperatura.c  DosMatricesInversas.c  Hipotenusa.c  NameDateNumber.c  NumerosIguales.c  RandomNumbers.c
Ejercicios/EjerciciosDePunteros/: AccesoVariable.c  ContarString.c  SumarArrayConPtr.c  UsodeMalloc.c
Ejercicios/EjsTema2/: 1.c  2.c  4.c  5.c  6.c  ArrayPunteros.c  MallocFreeMedia.c  MatrizTraspuesta.c  StructConH.c  StructConH.h
Ejercicios/EjsTema2/Asignaturas/: NotasAlumno.c  NotasAlumno.h  m.md
Teoria/: Bucles.c  ErAdri.c  EstructurasArray.c  EstructurasTypedef.c  Funciones.c  If.c  MathFuncs.c  Memorias.c  OperadoresLogicos.c  Punteros.c  StringFcs.c  Ternarias.c  arithmopers.c  arrays.c  enum.c  switch.c  userinput.c  variables.c
